--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -13,6 +13,8 @@
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
+    "@rneui/base": "^4.0.0-rc.5",
+    "@rneui/themed": "^4.0.0-rc.5",
     "apisauce": "^2.1.5",
     "expo": "~44.0.0",
     "expo-image-picker": "~12.0.1",
