--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -19,6 +19,7 @@
     "@rneui/themed": "^4.0.0-rc.5",
     "apisauce": "^2.1.5",
     "expo": "~44.0.0",
+    "expo-facebook": "~12.1.0",
     "expo-image-picker": "~12.0.1",
     "expo-status-bar": "~1.2.0",
     "form-data": "^4.0.0",
@@ -26,6 +27,7 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-autoscroll-flatlist": "^1.11.1",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-pager-view": "^5.4.25",
     "react-native-safe-area-context": "3.3.2",
@@ -33,8 +35,8 @@
     "react-native-tab-view": "^3.1.1",
     "react-native-web": "0.17.1",
     "react-native-webview": "11.15.0",
-    "stream-chat-react-native": "^4.12.1",
-    "expo-facebook": "~12.1.0"
+    "socket.io-client": "^4.5.1",
+    "stream-chat-react-native": "^4.12.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
